--- a/assets/style.css
+++ b/assets/style.css
@@ -104,3 +104,167 @@ footer {
 .small-text {
     font-size: smaller;
 }
+
+.btn {
+
+  top: 0;
+
+  left: 0;
+
+  transition: all .15s linear 0s;
+
+  position: relative;
+
+  display: inline-block;
+
+  padding: 15px 25px;
+
+  background-color: #47198c;
+
+  
+
+  text-transform: uppercase;
+
+  color: #e1e825;
+
+  font-family: arial;
+
+  letter-spacing: 1px;
+
+  
+
+  box-shadow: -6px 6px 0 #0329a8;
+
+  text-decoration: none;
+
+  
+
+  &:hover {
+
+    top: 3px;
+
+    left: -3px;
+
+    box-shadow: -3px 3px 0 #0329a8;
+
+    
+
+    &::after {
+
+      top: 1px;
+
+      left: -2px;
+
+      width: 4px;
+
+      height: 4px;
+
+    }
+
+    
+
+    &::before {
+
+      bottom: -2px;
+
+      right: 1px;
+
+      width: 4px;
+
+      height: 4px;
+
+    }
+
+  }
+
+  
+
+  &::after {
+
+    transition: all .15s linear 0s;
+
+    content: '';
+
+    position: absolute;
+
+    top: 2px;
+
+    left: -4px;
+
+    width: 8px;
+
+    height: 8px;
+
+    background-color: #0329a8;
+
+    transform: rotate(45deg);
+
+    z-index: -1;
+
+    
+
+  }
+
+  
+
+  &::before {
+
+    transition: all .15s linear 0s;
+
+    content: '';
+
+    position: absolute;
+
+    bottom: -4px;
+
+    right: 2px;
+
+    width: 8px;
+
+    height: 8px;
+
+    background-color: #0329a8;
+
+    transform: rotate(45deg);
+
+    z-index: -1;
+
+  }
+
+}
+
+
+
+a.btn { position: relative; }
+
+
+
+a:active.btn {
+
+  top: 6px;
+
+  left: -6px;
+
+  box-shadow: none;
+
+  
+
+  &:before {
+
+    bottom: 1px;
+
+    right: 1px;
+
+  }
+
+  
+
+  &:after {
+
+    top: 1px;
+
+    left: 1px;
+
+  }
+
+}
